2014-09-03  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Align documentation to help text in setfacl.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml (ntsec-common): Drop outdated comment about underdeveloped
	Solaris ACL API support.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (setfacl): Drop outdated note that default ACEs are not
	taken into account.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Disable description of db_prefix and db_separator settings.

2014-08-31  Corinna Vinschen  <corinna@vinschen.de>

	* utils.xml (getfacl): Document additional suid/sgid/vtx flag printing.

2014-08-15  Corinna Vinschen  <corinna@vinschen.de>

	* configure.ac: Convert to new AC_INIT style.
	* configure: Regenerate.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin-api.xml: Include misc-funcs.xml.
	* misc-funcs.xml: New file.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin-api.xml: Move chapter tags from path.xml back here.
	Include logon-funcs.xml.
	* logon-funcs.xml: Moved from ../cygwin here and converted to XML.
	* path.xml: Drop chapter tags.  Create subsections.

2014-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Throughout use parenthesis instead of braces where
	appropriate.
	(DBXDIRS): Remove.
	(XSLTPROC): Define for symmetry.  Use throughout.
	(clean): Drop removing cygwin-api.xml and doctool.*.
	(cygwin-api.xml): Drop rule.
	(doctool): Drop rule.
	(Makefile.dep): Add dependency to cygwin-api.xml.
	* cygwin-api.in.xml: Rename to cygwin-api.xml.  Convert includes to
	XML XInclude style.
	* doctool.c: Remove.
	* doctool.txt: Remove.
	* faq-programming.xml: Drop reference to local utils.xml file.
	* path.xml: Moved from ../cygwin and converted to XML.
	* posix.xml: Ditto.
	* using.xml: Drop relative path from utils.xml include.
	* utils.xml: Moved from ../utils.

2014-08-13  Corinna Vinschen  <corinna@vinschen.de>
